--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
     <id>com.github.lonre.gruvbox-intellij-theme</id>
     <name>Gruvbox - Theme</name>
-    <vendor>Lonre Wang</vendor>
+    <vendor>WalterWoshid</vendor>
 
     <description><![CDATA[
     Fork from https://plugins.jetbrains.com/plugin/12310-gruvbox-theme.
@@ -21,6 +21,7 @@
         <themeProvider id="3ef5925f-3169-46ca-ba19-96a58f317428" path="/gruvbox_dark_medium.theme.json"/>
         <themeProvider id="72be8783-3a4d-4044-bb03-191e61d21ed3" path="/gruvbox_dark_soft.theme.json"/>
         <themeProvider id="761771ad-a164-482d-96ee-fca15bf0a238" path="/gruvbox_dark_hard.theme.json"/>
+        <themeProvider id="896f95e4-59a3-4a4c-a3ec-74c1f86371ea" path="/gruvbox_dark_hard_islands.theme.json"/>
         <themeProvider id="1eaba802-33fc-4d50-a13d-616387745dc0" path="/gruvbox_light_medium.theme.json"/>
         <themeProvider id="d32e62e0-f0e1-4eab-b191-5304a2b628e1" path="/gruvbox_light_soft.theme.json"/>
         <themeProvider id="f2de70af-bc81-47f2-a734-4c807d5ca444" path="/gruvbox_light_hard.theme.json"/>
